# NN

./: Algorithm.cpp  Algorithm.h  Ann.cpp  Ann.h  Ann2.cpp  Ann2.h  CMakeLists.txt  DataSet.h  Dataset.cpp  Layers.cpp  Layers.h  NN  NN.cpp  NN.h  NN.sln  NN.vcxproj  NN.vcxproj.filters  Operators.cpp  Operators.h  README.md  Tensor.cpp  Tensor.h  Timer.cpp  Timer.h  Utility.cpp  Utility.h  build.sh  main.cpp  run.sh  run_build.sh  stdafx.h
CSVs/: note.txt  sum.csv  weightbmi.csv  xor.csv
NN/: Algorithm.cpp  Algorithm.h  Ann.cpp  Ann.h  DataSet.h  Dataset.cpp  Layers.cpp  Layers.h  NN.cpp  NN.h  NN.vcxproj  NN.vcxproj.filters  Operators.cpp  Operators.h  Tensor.cpp  Tensor.h  Timer.h  Utility.cpp  Utility.h  main.cpp  stdafx.h  weightbmi.csv  xor.csv
Networks/: BNet.cpp  BNet.h  Network.h
Networks/Resources/: Layer.cpp  Layer.h  Net.cpp  Net.h
